--- a/angular.json
+++ b/angular.json
@@ -19,9 +19,13 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
+              "src/favicon.ico",
+              "src/assets",
               {
+                
                 "glob": "**/*",
                 "input": "public"
+
               }
             ],
             "styles": [
@@ -88,5 +92,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
